# visual-servoing-puma

./: .gitignore  CMakeLists.txt  README.md  SimpleMqttConsumer.cpp  csvtotruecsv.py  data_10cm.csv  data_20cm.csv  depth_regression.py  errdata.csv  main.cpp  mse_calculator_yolo.py  mse_results.txt  opencv_test.py  out0.ppm  picfunc.cpp  picfunc.h  ppmtojpg.py  simpleConsumer  text_to_csv_yolo.py
Drawer/: 0.035.csv  0.05.csv  0.07new.csv  drawer.ipynb
Purple Ball.v1-v1.0.0.yolov7pytorch/: README.dataset.txt  README.roboflow.txt  data.yaml
Purple Ball.v1-v1.0.0.yolov7pytorch/test/labels/: conv_out141_jpg.rf.9cbf503a4ad162e065111293aae396c5.txt  conv_out149_jpg.rf.88f4dc0d9593846098a7061ee524539f.txt  conv_out156_jpg.rf.5a525f74906803748ce4e647dde9b500.txt  conv_out165_jpg.rf.d70b593942984eacb37f834cb588a93f.txt  conv_out169_jpg.rf.75c647b2af8a2d23dc9e5fedf82e0575.txt  conv_out190_jpg.rf.389789585a8c2a5973cd1b448971a025.txt  conv_out192_jpg.rf.fd01cf4858ab2606cb669e61fc5689b1.txt  conv_out198_jpg.rf.f8eeb1a2d234128872561827bbb672ae.txt  conv_out201_jpg.rf.7d01a1c012e8f8be0a9d10f1dc41f839.txt  conv_out204_jpg.rf.240cff9a95c3e74e85602545060ccb10.txt  conv_out258_jpg.rf.4f2148c573b44c05c935c474b22fdc61.txt  conv_out262_jpg.rf.877a3631633d183764eb118ea4735469.txt  conv_out263_jpg.rf.3049c21f6111a4fb0e2e0d43afad6017.txt  conv_out26_jpg.rf.ee0d63fd40dbec5869a6a79c3b5cf5fc.txt  conv_out273_jpg.rf.5d34b38dcc4b1583f90051067eb8fd87.txt  conv_out274_jpg.rf.2c56d99aed39006b5a50b7cb9e53ac47.txt  conv_out286_jpg.rf.2dc19cb4f5eff6853a1bb7a2af9cb572.txt  conv_out29_jpg.rf.210dfe0c223f15f568a7aacd3c690367.txt  conv_out338_jpg.rf.ebdec472a3204602bd86e92c64aa03eb.txt  conv_out340_jpg.rf.66f7e4a7bdf466ea7045c0a5f5d6f704.txt  conv_out342_jpg.rf.170da25a4c73196335f27bf0c55e7153.txt  conv_out360_jpg.rf.fe25b45c511ab1b4ccb25c3fb8b429fb.txt  conv_out362_jpg.rf.0bbfe6d23a34ec1c9c1313eb5e2e6f6f.txt  conv_out373_jpg.rf.25a5ab1ea83820dcdfd878be7c71cb08.txt  conv_out3_jpg.rf.e04d1d12097a46d58faf27836a27ab61.txt  conv_out40_jpg.rf.3833154087706e6316d987dfbecd85d8.txt  (+63 more)
regression_dataset/: data_10cm_new.csv  data_13cm_new.csv  data_15cm.csv  data_15cm_new.csv  data_18cm_new.csv  data_20cm_new.csv  data_25cm.csv  data_25cm_new.csv  data_30cm.csv  data_30cm_new.csv  data_5cm.csv  data_5cm_new.csv  data_8cm_new.csv
yoloresults/: YoloV5nano.csv  YoloV5s.csv  YoloV7Tiny.csv  YoloV7XL.csv  groundtruth.csv
yolov5_new/: detect.py
yolov5_new/weights/: timedata.csv
yolov7-new/: detect.py  export.py
yolov7_new/: detect.py  out0.ppm
yolov7_new/models/: common.py  experimental.py
(+1362 files in other folders)
